--- a/now-ui.json
+++ b/now-ui.json
@@ -5,9 +5,9 @@
 	        "innerComponents": [],
 			"uiBuilder": {
 				"associatedTypes": ["global.core", "global.landing-page"],
-				"label": "My Component",
+				"label": "AES Google Map Component",
 				"icon": "document-outline",
-				"description": "A description of my component",
+				"description": "A Google Map Component",
 				"category": "primitives"
 			}
 	    }
