--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"@servicenow/ui-core": "quebec",
 		"@servicenow/ui-effect-graphql": "19.4.2",
 		"@servicenow/ui-renderer-snabbdom": "quebec",
-		"load-google-maps-api": "^2.0.2"
+		"load-google-maps-api": "^2.0.2",
+		"sn-translate": "latest"
 	},
 	"devDependencies": {
 		"@servicenow/cli-archetype-dev": "22.0.0",
