--- a/now-ui.json
+++ b/now-ui.json
@@ -1,15 +1,48 @@
 {
 	"scopeName": "x_snc_googlemap",
 	"components": {
-	    "x-snc-googlemap": {
-	        "innerComponents": [],
+		"x-snc-googlemap": {
+			"innerComponents": [],
 			"uiBuilder": {
-				"associatedTypes": ["global.core", "global.landing-page"],
+				"associatedTypes": [
+					"global.core",
+					"global.landing-page"
+				],
 				"label": "AES Google Map Component",
 				"icon": "map-pin-outline",
 				"description": "A Google Map Component",
 				"category": "primitives"
-			}
-	    }
+			},
+			"properties": [
+				{
+					"name": "data",
+					"label": "List of map markers",
+					"description": "",
+					"defaultValue": [
+						{
+							"table": "sys_user",
+							"sys_id": "5137153cc611227c000bbd1bd8cd2005",
+							"lat": 40.7896239,
+							"long": -73.9598939,
+							"image": "https://pbs.twimg.com/profile_images/1483341411911041025/hY5z-EDB_400x400.jpg"
+						}
+					],
+					"fieldType": "json",
+					"readOnly": false,
+					"required": true,
+					"typeMetadata": {}
+				},
+				{
+					"name": "initial_zoom",
+					"label": "Initial Zoom",
+					"description": "",
+					"defaultValue": 5,
+					"fieldType": "integer",
+					"readOnly": false,
+					"required": true,
+					"typeMetadata": {}
+				}
+			]
+		}
 	}
 }
