--- a/now-ui.json
+++ b/now-ui.json
@@ -1,7 +1,7 @@
 {
-	"scopeName": "x_snc_googlemap",
+	"scopeName": "x_snc_gmap",
 	"components": {
-		"x-snc-googlemap": {
+		"x-snc-gmap": {
 			"innerComponents": [],
 			"uiBuilder": {
 				"associatedTypes": [
@@ -17,29 +17,11 @@
 				{
 					"name": "data",
 					"label": "List of map markers",
-					"description": "",
-					"defaultValue": [
-						{
-							"table": "sys_user",
-							"sys_id": "5137153cc611227c000bbd1bd8cd2005",
-							"lat": 40.7896239,
-							"long": -73.9598939,
-							"image": "https://pbs.twimg.com/profile_images/1483341411911041025/hY5z-EDB_400x400.jpg"
-						}
-					],
+					"description": "Array of objects that defines the items displayed on the map - each object can have values for 'table', 'sys_id', 'lat', 'long', 'image'",
 					"fieldType": "json",
 					"readOnly": false,
 					"required": true,
-					"typeMetadata": {}
-				},
-				{
-					"name": "initial_zoom",
-					"label": "Initial Zoom",
-					"description": "",
-					"defaultValue": 5,
-					"fieldType": "integer",
-					"readOnly": false,
-					"required": true,
+					"defaultValue": [],
 					"typeMetadata": {}
 				}
 			]
