--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
 	"module": "src/index.js",
 	"dependencies": {
 		"@google/markerclustererplus": "latest",
-		"@servicenow/cli-archetype": "22.0.0",
-		"@servicenow/cli-component-archetype": "22.0.0",
-		"@servicenow/library-translate": "quebec",
-		"@servicenow/sass-kit": "quebec",
-		"@servicenow/sass-theme": "quebec",
-		"@servicenow/ui-core": "quebec",
-		"@servicenow/ui-effect-graphql": "19.4.2",
-		"@servicenow/ui-effect-http": "^19.4.2",
-		"@servicenow/ui-renderer-snabbdom": "quebec",
+		"@servicenow/cli-archetype": "latest",
+		"@servicenow/cli-component-archetype": "latest",
+		"@servicenow/library-translate": "latest",
+		"@servicenow/sass-kit": "latest",
+		"@servicenow/sass-theme": "latest",
+		"@servicenow/ui-core": "latest",
+		"@servicenow/ui-effect-graphql": "latest",
+		"@servicenow/ui-effect-http": "latest",
+		"@servicenow/ui-renderer-snabbdom": "latest",
 		"load-google-maps-api": "^2.0.2",
 		"sn-translate": "latest"
 	},
 	"devDependencies": {
-		"@servicenow/cli-archetype-dev": "22.0.0",
-		"@servicenow/cli-component-archetype-dev": "22.0.0"
+		"@servicenow/cli-archetype-dev": "latest",
+		"@servicenow/cli-component-archetype-dev": "latest"
 	}
 }
