--- a/now-ui.json
+++ b/now-ui.json
@@ -6,40 +6,44 @@
 			"uiBuilder": {
 				"associatedTypes": [
 					"global.core",
-					"global.landing-page"
+					"global.landing-page",
+					"global.visualization"
 				],
-				"label": "AES Google Map Component",
-				"icon": "map-pin-outline",
+				"category": "primitives",
 				"description": "A Google Map Component",
-				"category": "primitives"
+				"icon": "map-pin-outline",
+				"label": "AES Google Map"
 			},
 			"properties": [
 				{
-					"name": "data",
-					"label": "List of map markers",
-					"description": "Array of objects that defines the items displayed on the map - each object can have values for 'table', 'sys_id', 'lat', 'long', 'image'",
+					"description": "NEW Array of objects that defines the items displayed on the map - each object can have values for 'table', 'sys_id', 'lat', 'long', 'image'",
 					"fieldType": "json",
+					"label": "Map Markers",
+					"name": "mapMarkers",
 					"readOnly": false,
 					"required": true,
-					"defaultValue": [],
+					"defaultValue": "[{\"table\":\"sys_user\"}, \"sys_id\": \"5137153cc611227c000bbd1bd8cd2005\", \"lat\": 32.582800, \"long\": -117.034330, \"image\": \"//now-logo.svg\"}]",
 					"typeMetadata": {
 						"schema": {
 							"type": "array",
 							"items": {
-								"table": {
-									"type": "string"
-								},
-								"sys_id": {
-									"type": "string"
-								},
-								"lat": {
-									"type": "number"
-								},
-								"long": {
-									"type": "number"
-								},
-								"image": {
-									"type": "string"
+								"type": "object",
+								"properties": {
+									"id": {
+										"type": "string"
+									},
+									"sys_id": {
+										"type": "string"
+									},
+									"lat": {
+										"type": "number"
+									},
+									"long": {
+										"type": "number"
+									},
+									"image": {
+										"type": "string"
+									}
 								}
 							}
 						}
