--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"module": "src/index.js",
 	"dependencies": {
+		"@google/markerclustererplus": "latest",
 		"@servicenow/cli-archetype": "latest",
 		"@servicenow/cli-component-archetype": "latest",
 		"@servicenow/library-translate": "latest",
@@ -24,8 +25,8 @@
 		"@servicenow/ui-effect-graphql": "latest",
 		"@servicenow/ui-effect-http": "latest",
 		"@servicenow/ui-renderer-snabbdom": "latest",
+		"chalk": "^1.1.3",
 		"load-google-maps-api": "^2.0.2",
-		"@google/markerclustererplus": "latest",
 		"sn-translate": "latest"
 	},
 	"devDependencies": {
