--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@servicenow/cli-archetype": "latest",
 		"@servicenow/cli-component-archetype": "latest",
 		"@servicenow/library-translate": "latest",
+		"@servicenow/now-input": "^19.8.2-ecd",
 		"@servicenow/sass-kit": "latest",
 		"@servicenow/sass-theme": "latest",
 		"@servicenow/ui-core": "latest",
