--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@servicenow/library-translate": "latest",
 		"@servicenow/now-input": "^19.8.2-ecd",
 		"@servicenow/now-loader": "^19.8.2-ecd",
+		"@servicenow/now-select": "^19.8.2-ecd",
 		"@servicenow/sass-kit": "latest",
 		"@servicenow/sass-theme": "latest",
 		"@servicenow/ui-core": "latest",
