--- a/now-cli.json
+++ b/now-cli.json
@@ -1,14 +1,15 @@
 {
   "development": {
     "proxy": {
-      "proxies": ["/api"]
+      "proxies": [
+        "/api"
+      ]
+    },
+    "devServer": {
+      "client": {
+        "overlay": false
+      }
     }
   },
-  "styles": {
-      "themes": [{
-        "module": "@servicenow/sass-theme",
-        "main": ["theme.scss"],
-        "copyFiles": ["type/*", "*.scss"]
-      }]
-  }
+  "version": "2"
 }
