--- a/package.json
+++ b/package.json
@@ -1,41 +1,54 @@
 {
 	"name": "x-snc-gmap",
-	"version": "0.0.4",
-	"author" : {
+	"version": "0.0.5",
+	"author": {
 		"name": "Marc Mouries",
 		"email": "marc.mouries@servicenow.com"
 	},
 	"private": false,
-	"description": "Google Map component for AES",
+	"description": "Google Map component for ServiceNow Next Experience",
 	"keywords": [
 		"ServiceNow",
 		"Now Experience UI Component",
-		"sn-googlemap"
+		"sn-googlemap",
+		"google-maps"
 	],
 	"readme": "./README.md",
 	"engines": {
-		"node": ">=8.6.0",
-		"npm": ">=5.3.0"
+		"node": ">=18.0.0",
+		"npm": ">=9.0.0"
 	},
 	"module": "src/index.js",
+	"scripts": {
+		"start": "snc ui-component develop --open",
+		"dev": "snc ui-component develop",
+		"build": "snc ui-component build",
+		"deploy": "snc ui-component deploy",
+		"test": "snc ui-component test"
+	},
 	"dependencies": {
-		"@google/markerclustererplus": "latest",
-		"@servicenow/cli-archetype": "vancouver",
-		"@servicenow/cli-component-archetype": "vancouver",
-		"@servicenow/now-loader": "19.8.2-ecd",
-		"@servicenow/sass-kit": "19.8.2-ecd",
-		"@servicenow/sass-theme": "19.8.2-ecd",
-		"@servicenow/ui-core": "vancouver",
-		"@servicenow/ui-effect-graphql": "vancouver",
-		"@servicenow/ui-effect-http": "vancouver",
-		"@servicenow/ui-renderer-snabbdom": "vancouver",
+		"@google/markerclustererplus": "^5.1.3",
+		"@servicenow/cli-archetype": "latest",
+		"@servicenow/cli-component-archetype": "latest",
+		"@servicenow/now-loader": "latest",
+		"@servicenow/sass-kit": "latest",
+		"@servicenow/sass-theme": "latest",
+		"@servicenow/ui-core": "latest",
+		"@servicenow/ui-effect-graphql": "latest",
+		"@servicenow/ui-effect-http": "latest",
+		"@servicenow/ui-renderer-snabbdom": "latest",
 		"amb-client-js": "file:amb-client-js-20.0.3.tgz",
-		"chalk": "^1.1.3",
+		"chalk": "^4.1.2",
 		"load-google-maps-api": "^2.0.2",
 		"sn-translate": "latest"
 	},
 	"devDependencies": {
-		"@servicenow/cli-archetype-dev": "vancouver",
-		"@servicenow/cli-component-archetype-dev": "vancouver"
+		"@babel/runtime": "^7.18.9",
+		"@servicenow/cli-archetype-dev": "latest",
+		"@servicenow/cli-component-archetype-dev": "latest",
+		"sass": "^1.77.0"
+	},
+	"overrides": {
+		"node-sass": "npm:sass@^1.77.0"
 	}
 }
